Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    UINT32 ctrlflags;           //User writes message configuration options
    UINT16 flag1;               //Card writes message flag 1
    UINT16 flag2;               //Card writes message flag 2
    UINT16 errflags;            //Card writes error flags
    UINT16 actflags;            //Card writes activity flags
    UINT16 resptime;            //Card writes response time
    UINT16 resv7;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    UINT32 timetag;             //Card writes time tag
    UINT32 elapsetime;          //Card writes elapsed time
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //User writes command word
	UINT16 cwdinfo;				//User writes command word info
	UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;				//Card writes status word info
    UINT16 data[32];            //User writes data words
    UINT16 extra[8];            //User writes extra words
} XMITFIELDSEBR;
typedef XMITFIELDSEBR * LPXMITFIELDSEBR;
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackCWD(INT32 TAval,INT32 TRflag,INT32 SAval,INT32 WCval);
BTIEBRAPI VOID __stdcall BTIEBR_ValUnpackCWD(UINT16 CWDval,LPINT32 TAval,LPINT32 TRflag,LPINT32 SAval,LPINT32 WCval);
/**
*
*  Internal functions used by the BTIEBR Driver.
*
**/

BTIEBRAPI LISTADDR __stdcall BTIEBR_BCCreateListEx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_BCCreateListExx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_BCGetMsg(INT32 index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCIMGapRd(LPUINT16 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCIMGapWr(UINT16 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedBranchEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedCallEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedLogEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,UINT16 tagval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedNop(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedRetryEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 retryflag,UINT16 retries,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedUser(UINT32 useraddr,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSetEntry(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkEx(BOOL writeflag,INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkInit(INT32 maxcount,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkRd(INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkWr(INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkAddr(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkOptRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkOptWr(UINT16 rtopt,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_BlkPtrRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_BlkPtrWr(UINT32 descaddr,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkRd(LPUINT16 block,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkReset(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkSWDRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkSWDWr(UINT16 swdval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkWipe(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkWr(LPUINT16 block,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ChConfig(BOOL enableflag,INT32 type,UINT16 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChIsRunning(INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_CmdAddr(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_CmdAlloc(INT32 count,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_CmdAllocEx(UINT32 configval,INT32 count,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_CmdBaseRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdBaseWr(UINT32 addrval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdClear(INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdCountRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdCountWr(UINT16 countval,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdCtrlRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdCtrlWr(UINT16 ctrlval,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdCurrRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdCurrWr(UINT16 addrval,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdInit(UINT16 opcode,LPUINT16 block);
BTIEBRAPI SCHNDX __stdcall BTIEBR_CmdInsert(LPUINT16 block,INT32 channum,HCORE handleval);