Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS

            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ValPackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ValUnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ValUnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 wcval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCCreateListEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd, UInt16[] data, Int32 rtlink, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCCreateListExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd, UInt16[] data, Int32 rtlink, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCGetMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCGetMsg(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCIMGapRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCIMGapRd(ref UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCIMGapWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCIMGapWr(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedBranchEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedCallEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedCallEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedLogEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedLogEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 opcode, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedNop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedNop(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedRetryEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSchedUser@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedUser(UInt32 useraddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCSetEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSetEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCTransmitMsgBlkEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTransmitMsgBlkEx(Int32 writeflag, Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 1)] XMITFIELDSEBR[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCTransmitMsgBlkInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTransmitMsgBlkInit(Int32 maxcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCTransmitMsgBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTransmitMsgBlkRd(Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] XMITFIELDSEBR[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BCTransmitMsgBlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTransmitMsgBlkWr(Int32 count, [In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 0)] XMITFIELDSEBR[] xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_BlkAddr(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkOptRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_BlkOptRd(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkOptWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkOptWr(UInt16 rtopt, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkPtrRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BlkPtrRd(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkPtrWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_BlkPtrWr(UInt32 descaddr, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkRd(UInt16[] block, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkReset@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkReset(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkSWDRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_BlkSWDRd(Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkSWDWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkSWDWr(UInt16 swdval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkWipe(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_BlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BlkWr(UInt16[] block, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ChConfig@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChConfig(Int32 enableflag, Int32 typeval, UInt16 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ChIsRunning@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChIsRunning(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_CmdAddr(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_CmdAlloc(Int32 count, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_CmdAllocEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdBaseRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_CmdBaseRd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdBaseWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdBaseWr(UInt32 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdClear(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_CmdCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCtrlRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_CmdCtrlRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCtrlWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCurrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_CmdCurrRd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdCurrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdCurrWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdInit(UInt16 opcode, UInt16[] block);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_CmdInsert@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdInsert(UInt16[] block, Int32 channum, IntPtr handleval);
